unified into 1 module, getAllMatches throwing nullpointer